# trackerbot

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  tracker_config(example).json
cmake/: FindRapidJSON.cmake  FindSpdLog.cmake
include/trackerbot/: commands.h  sql.h  tracker.h  trackercfg.h  types.h  utility.h
src/: commands.cpp  main.cpp  sql.cpp  tracker.cpp  trackercfg.cpp  utility.cpp
